ISSTA-2023-AE/data/Evaluation/USING-GRAYC-IN-THE-WILD/bug-reports/grayc-frama-c-crash/2-1-Z.shift_left-count-not-positive/outb.txt
5523daed847ab69918007c2c696bec546984c2d8.c:3:7: error: named bit-field 's' has zero width
  int s : (0);
      ^
5523daed847ab69918007c2c696bec546984c2d8.c:5:1: warning: return type of 'main' is not 'int' [-Wmain-return-type]
void main () {
^
5523daed847ab69918007c2c696bec546984c2d8.c:5:1: note: change return type to 'int'
void main () {
^~~~
int
1 warning and 1 error generated.
